# pxr-plug

./: CMakeLists.txt  README.md  pch.h  pyproject-dev.toml  pyproject.toml  testPlug.py
.github/actions/building-deps/: action.yml
cmake/: pxr-plug-config.cmake.in
src/: CMakeLists.txt
src/pxr/plug/: api.h  debugCodes.cpp  debugCodes.h  info.cpp  info.h  initConfig.cpp  interfaceFactory.cpp  interfaceFactory.h  moduleDeps.cpp  notice.cpp  notice.h  pch.h  plugin.cpp  plugin.h  registry.cpp  registry.h  staticInterface.cpp  staticInterface.h  testPlugBase.cpp  testPlugBase.h  thisPlugin.h
src/python/: CMakeLists.txt  module.cpp  wrapNotice.cpp  wrapPlugin.cpp  wrapRegistry.cpp  wrapTestPlugBase.cpp
test/: CMakeLists.txt  TestPlugDso3.cpp  TestPlugModule2__init__.py  TestPlugModule3__init__.py  TestPlugModuleDepCycle__init__.py  TestPlugModuleEmpty__init__.py  TestPlugModuleLoaded__init__.py  testPlug.py  test_Plug.py
test/plugins/: CMakeLists.txt
test/plugins/TestPlugDso1/: CMakeLists.txt  plugInfo.json  plugin.cpp
test/plugins/TestPlugDso2/: CMakeLists.txt  plugInfo.json  plugin.cpp
test/plugins/TestPlugDso3/: CMakeLists.txt  plugInfo.json  plugin.cpp
test/plugins/TestPlugDsoEmpty/: CMakeLists.txt  plugin.cpp
test/plugins/TestPlugDsoIncomplete/: CMakeLists.txt  plugin.cpp
test/plugins/TestPlugDsoUnloadable/: CMakeLists.txt  plugInfo.json  plugin.cpp
test/plugins/python/TestPlugModule1/: __init__.py  plugInfo.json
test/plugins/python/TestPlugModule2/: __init__.py  plugInfo.json
test/plugins/python/TestPlugModule3/: __init__.py  plugInfo.json
test/plugins/python/TestPlugModuleDepBadBase/: __init__.py  plugInfo.json
test/plugins/python/TestPlugModuleDepBadDep/: __init__.py  plugInfo.json
test/plugins/python/TestPlugModuleDepBadDep2/: __init__.py  plugInfo.json
test/plugins/python/TestPlugModuleDepBadLoad/: __init__.py  plugInfo.json
test/plugins/python/TestPlugModuleDepCycle/: __init__.py  plugInfo.json
test/plugins/python/TestPlugModuleEmpty/: __init__.py
test/plugins/python/TestPlugModuleIncomplete/: __init__.py
test/plugins/python/TestPlugModuleLoaded/: __init__.py  plugInfo.json
test/plugins/python/TestPlugModuleLoadedBadBase/: __init__.py  plugInfo.json
test/plugins/python/TestPlugModuleUnicode/: __init__.py  plugInfo.json
test/plugins/python/TestPlugModuleUnloadable/: __init__.py  plugInfo.json
test/plugins/python/TestPlugModuleUnloadable2/: __init__.py
test/utility/: CMakeLists.txt
test/utility/plugTest/: testPlugBase.cpp  testPlugBase.h
test/utility/python/: CMakeLists.txt  __init__.py  module.cpp  wrapTestPlugBase.cpp
